# server/features/common/proto_gen/openapi/eganow/api/auth_service.swagger.json
@@ -222,7 +222,7 @@
     }
   },
   "definitions": {
-    "apiAccountInfo": {
+    "apiAccountInfoResponse": {
       "type": "object",
       "properties": {
         "id": {
@@ -238,7 +238,7 @@
           "type": "string"
         },
         "createdAt": {
-          "$ref": "#/definitions/apiTimestamp"
+          "type": "string"
         }
       }
     },
@@ -282,7 +282,7 @@
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/apiAccountInfo"
+            "$ref": "#/definitions/apiAccountInfoResponse"
           }
         }
       }
@@ -322,21 +322,6 @@
         }
       },
       "description": "Wrapper message for `string`.\n\nThe JSON representation for `StringValue` is JSON string."
-    },
-    "apiTimestamp": {
-      "type": "object",
-      "properties": {
-        "seconds": {
-          "type": "string",
-          "format": "int64",
-          "description": "Represents seconds of UTC time since Unix epoch\n1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to\n9999-12-31T23:59:59Z inclusive."
-        },
-        "nanos": {
-          "type": "integer",
-          "format": "int32",
-          "description": "Non-negative fractions of a second at nanosecond resolution. Negative\nsecond values with fractions must still have non-negative nanos values\nthat count forward in time. Must be from 0 to 999,999,999\ninclusive."
-        }
-      }
     },
     "protobufAny": {
       "type": "object",
